--- a/Session1A-PyData/Session1A_Functions.ipynb
+++ b/Session1A-PyData/Session1A_Functions.ipynb
@@ -210,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "my_sum?"
